--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cloud-cli/",
+  "name": "@cloud-cli/proxy",
   "version": "0.0.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -12,7 +12,7 @@
   "prettier": "@cloud-cli/prettier-config",
   "repository": {
     "type": "git",
-    "url": "https://github.com/cloud-cli/.git"
+    "url": "https://github.com/cloud-cli/proxy.git"
   },
   "publishConfig": {
     "access": "public"
