--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "access": "public"
   },
   "devDependencies": {
-    "@cloud-cli/jest-config": "^1.0.0",
     "@cloud-cli/prettier-config": "^1.0.0",
     "@cloud-cli/typescript-config": "^1.0.0",
-    "@types/node": "^20.6.1"
+    "@types/node": "^20.6.1",
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   }
 }
