--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "@cloud-cli/typescript-config",
   "compilerOptions": {
     "outDir": "./dist",
+    "moduleResolution": "Bundler",
+    "skipLibCheck": true
   },
   "include": ["src/*.ts", "src/*.mts"]
 }
